--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: NodeJS/Angular github actions
 on: [push]
 jobs:
   Explore-GitHub-Actions:
@@ -20,8 +20,8 @@ jobs:
       - name: Install node monules
         run: |
           npm install
-      - name: run test
+      - name: Run lint
         run: |
-          npm run test
+          npm run lint
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
