--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: NodeJS/Angular github actions
 on: [push]
 jobs:
-  NodeJS/Angular github actions:
+  NodeJS-Angular-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
